# backend/docs/swagger.yaml
@@ -996,7 +996,7 @@ definitions:
         type: string
       status:
         allOf:
-        - $ref: '#/definitions/domain.CommentStatus'
+        - $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.CommentStatus'
         description: 'status : -1 reject 0 pending 1 accept'
     type: object
   domain.CommentReq:
@@ -1022,17 +1022,6 @@ definitions:
     - node_id
     - pic_urls
     type: object
-  domain.CommentStatus:
-    enum:
-    - -1
-    - 0
-    - 1
-    format: int32
-    type: integer
-    x-enum-varnames:
-    - CommentStatusReject
-    - CommentStatusPending
-    - CommentStatusAccepted
   domain.CompleteReq:
     properties:
       prefix:
@@ -1081,7 +1070,7 @@ definitions:
   domain.ConversationInfo:
     properties:
       user_info:
-        $ref: '#/definitions/domain.UserInfo'
+        $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.UserInfo'
     type: object
   domain.ConversationListItem:
     properties:
@@ -1672,23 +1661,6 @@ definitions:
       summary:
         type: string
     type: object
-  domain.NodeGroupDetail:
-    properties:
-      auth_group_id:
-        type: integer
-      auth_ids:
-        items:
-          type: integer
-        type: array
-      kb_id:
-        type: string
-      name:
-        type: string
-      node_id:
-        type: string
-      perm:
-        $ref: '#/definitions/consts.NodePermName'
-    type: object
   domain.NodeListItemResp:
     properties:
       content_type:
@@ -2144,6 +2116,21 @@ definitions:
     - StatPageSceneNodeDetail
     - StatPageSceneChat
     - StatPageSceneLogin
+  domain.SwitchModeReq:
+    properties:
+      mode:
+        enum:
+        - manual
+        - auto
+        type: string
+    required:
+    - mode
+    type: object
+  domain.SwitchModeResp:
+    properties:
+      message:
+        type: string
+    type: object
   domain.TextConfig:
     properties:
       title:
@@ -2262,24 +2249,6 @@ definitions:
     required:
     - id
     - kb_id
-    type: object
-  domain.UserInfo:
-    properties:
-      auth_user_id:
-        type: integer
-      avatar:
-        description: avatar
-        type: string
-      email:
-        type: string
-      from:
-        $ref: '#/definitions/domain.MessageFrom'
-      name:
-        type: string
-      real_name:
-        type: string
-      user_id:
-        type: string
     type: object
   domain.WebAppCommentSettings:
     properties:
@@ -2414,7 +2383,7 @@ definitions:
     properties:
       auths:
         items:
-          $ref: '#/definitions/v1.AuthItem'
+          $ref: '#/definitions/github_com_chaitin_panda-wiki_api_auth_v1.AuthItem'
         type: array
       client_id:
         type: string
@@ -2425,6 +2394,41 @@ definitions:
       source_type:
         $ref: '#/definitions/consts.SourceType'
     type: object
+  github_com_chaitin_panda-wiki_api_auth_v1.AuthItem:
+    properties:
+      avatar_url:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      ip:
+        type: string
+      last_login_time:
+        type: string
+      source_type:
+        $ref: '#/definitions/consts.SourceType'
+      username:
+        type: string
+    type: object
+  github_com_chaitin_panda-wiki_api_auth_v1.AuthSetReq:
+    properties:
+      client_id:
+        type: string
+      client_secret:
+        type: string
+      kb_id:
+        type: string
+      proxy:
+        type: string
+      source_type:
+        allOf:
+        - $ref: '#/definitions/consts.SourceType'
+        enum:
+        - github
+    required:
+    - source_type
+    type: object
   github_com_chaitin_panda-wiki_api_share_v1.AuthGetResp:
     properties:
       auth_type:
@@ -2433,6 +2437,23 @@ definitions:
         $ref: '#/definitions/consts.LicenseEdition'
       source_type:
         $ref: '#/definitions/consts.SourceType'
+    type: object
+  github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubReq:
+    properties:
+      kb_id:
+        type: string
+      redirect_url:
+        type: string
+    type: object
+  github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubResp:
+    properties:
+      url:
+        type: string
+    type: object
+  github_com_chaitin_panda-wiki_api_share_v1.FileUploadResp:
+    properties:
+      key:
+        type: string
     type: object
   github_com_chaitin_panda-wiki_api_share_v1.GitHubCallbackResp:
     type: object
@@ -2475,6 +2496,17 @@ definitions:
       error:
         type: string
     type: object
+  github_com_chaitin_panda-wiki_domain.CommentStatus:
+    enum:
+    - -1
+    - 0
+    - 1
+    format: int32
+    type: integer
+    x-enum-varnames:
+    - CommentStatusReject
+    - CommentStatusPending
+    - CommentStatusAccepted
   github_com_chaitin_panda-wiki_domain.ModelListItem:
     properties:
       api_header:
@@ -2528,6 +2560,41 @@ definitions:
     type: string
     x-enum-varnames:
     - ModelProviderBrandBaiZhiCloud
+  github_com_chaitin_panda-wiki_domain.NodeGroupDetail:
+    properties:
+      auth_group_id:
+        type: integer
+      auth_ids:
+        items:
+          type: integer
+        type: array
+      kb_id:
+        type: string
+      name:
+        type: string
+      node_id:
+        type: string
+      perm:
+        $ref: '#/definitions/consts.NodePermName'
+    type: object
+  github_com_chaitin_panda-wiki_domain.UserInfo:
+    properties:
+      auth_user_id:
+        type: integer
+      avatar:
+        description: avatar
+        type: string
+      email:
+        type: string
+      from:
+        $ref: '#/definitions/domain.MessageFrom'
+      name:
+        type: string
+      real_name:
+        type: string
+      user_id:
+        type: string
+    type: object
   gocap.ChallengeData:
     properties:
       challenge:
@@ -2585,59 +2652,12 @@ definitions:
       total:
         type: integer
     type: object
-  v1.AuthGitHubReq:
-    properties:
-      kb_id:
-        type: string
-      redirect_url:
-        type: string
-    type: object
-  v1.AuthGitHubResp:
-    properties:
-      url:
-        type: string
-    type: object
-  v1.AuthItem:
-    properties:
-      avatar_url:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      ip:
-        type: string
-      last_login_time:
-        type: string
-      source_type:
-        $ref: '#/definitions/consts.SourceType'
-      username:
-        type: string
-    type: object
   v1.AuthLoginSimpleReq:
     properties:
       password:
         type: string
     required:
     - password
-    type: object
-  v1.AuthSetReq:
-    properties:
-      client_id:
-        type: string
-      client_secret:
-        type: string
-      kb_id:
-        type: string
-      proxy:
-        type: string
-      source_type:
-        allOf:
-        - $ref: '#/definitions/consts.SourceType'
-        enum:
-        - github
-    required:
-    - source_type
     type: object
   v1.CommentLists:
     properties:
@@ -2779,11 +2799,6 @@ definitions:
       user_access_token:
         type: string
     type: object
-  v1.FileUploadResp:
-    properties:
-      key:
-        type: string
-    type: object
   v1.KBUserInviteReq:
     properties:
       kb_id:
@@ -2907,7 +2922,7 @@ definitions:
       answerable_groups:
         description: 可被问答
         items:
-          $ref: '#/definitions/domain.NodeGroupDetail'
+          $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.NodeGroupDetail'
         type: array
       id:
         type: string
@@ -2916,12 +2931,12 @@ definitions:
       visible_groups:
         description: 导航内可见
         items:
-          $ref: '#/definitions/domain.NodeGroupDetail'
+          $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.NodeGroupDetail'
         type: array
       visitable_groups:
         description: 可被访问
         items:
-          $ref: '#/definitions/domain.NodeGroupDetail'
+          $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.NodeGroupDetail'
         type: array
     type: object
   v1.ResetPasswordReq:
@@ -3178,7 +3193,7 @@ paths:
         name: param
         required: true
         schema:
-          $ref: '#/definitions/v1.AuthSetReq'
+          $ref: '#/definitions/github_com_chaitin_panda-wiki_api_auth_v1.AuthSetReq'
       produces:
       - application/json
       responses:
@@ -3976,6 +3991,33 @@ paths:
                   $ref: '#/definitions/domain.GetProviderModelListResp'
               type: object
       summary: get provider supported model list
+      tags:
+      - model
+  /api/v1/model/switch-mode:
+    post:
+      consumes:
+      - application/json
+      description: switch model mode between manual and auto
+      parameters:
+      - description: switch mode request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/domain.SwitchModeReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/domain.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/domain.SwitchModeResp'
+              type: object
+      summary: switch mode
       tags:
       - model
   /api/v1/node:
@@ -4834,7 +4876,7 @@ paths:
         name: param
         required: true
         schema:
-          $ref: '#/definitions/v1.AuthGitHubReq'
+          $ref: '#/definitions/github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubReq'
       produces:
       - application/json
       responses:
@@ -4845,7 +4887,7 @@ paths:
             - $ref: '#/definitions/domain.PWResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/v1.AuthGitHubResp'
+                  $ref: '#/definitions/github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubResp'
               type: object
       summary: GitHub登录
       tags:
@@ -5145,7 +5187,7 @@ paths:
             - $ref: '#/definitions/domain.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/v1.FileUploadResp'
+                  $ref: '#/definitions/github_com_chaitin_panda-wiki_api_share_v1.FileUploadResp'
               type: object
       summary: 文件上传
       tags:
